// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/languageDetector init should initialize i18next (isInitialized false, isProduction => false): i18next.init 1`] = `
Array [
  Array [
    Object {
      "debug": true,
      "fallbackLng": "en",
      "whitelist": Array [
        "en",
        "es",
      ],
    },
  ],
]
`;

exports[`lib/languageDetector init should initialize i18next (isInitialized false, isProduction => false): i18next.use 1`] = `
Array [
  Array [
    "i18next-browser-languagedetector",
  ],
]
`;

exports[`lib/languageDetector init should initialize i18next (isInitialized false, isProduction => true): i18next.init 1`] = `
Array [
  Array [
    Object {
      "debug": false,
      "fallbackLng": "en",
      "whitelist": Array [
        "en",
        "es",
      ],
    },
  ],
]
`;

exports[`lib/languageDetector init should initialize i18next (isInitialized false, isProduction => true): i18next.use 1`] = `
Array [
  Array [
    "i18next-browser-languagedetector",
  ],
]
`;
